# homepage_init_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  environment.yml  flyway.conf  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: lint.yml  sync-to-rool.yml
db/: YOUR_DB_FILENAME.db.bak
docs/: article.md  bank.md  bot.md  comment.md  common.md  discord-webhook.md  file.md  image.md  key_value.md  major.md  oldboy.md  oldboy_applicant.md  root.md  scsc.md  sigpig.md  user.md  w.md
docs/api/: article.md  comment.md  common.md  file.md  key_value.md  major.md  scsc.md  sigpig.md  test_utils.md  user.md  w.md
docs/design/: update_global_status.md  user.md
docs/manual/: sql.md  userEnrollManual.md  user_enroll_flow.md
script/: clear_db.sh  init_db.sh  insert_boards.sh  insert_majors.sh  insert_president_users.sh  insert_sample_articles.sh  insert_sample_comments.sh  insert_sample_users.sh  insert_scsc_global_status.sh  insert_user_roles.sh  update_conda_env.sh
script/init_db/: check_user_status_rules.csv  index.sh  insert_boards.sh  insert_check_user_status_rules.sh  insert_kv.sh  insert_majors.sh  insert_president_users.sh  insert_scsc_global_status.sh  insert_tables copy.sh  insert_tables.sh  insert_user_roles.sh  majors.csv  presidents.csv  presidents.example.csv
script/insert_sample_data/: index.sh  insert_president_users.sh  insert_sample_articles.sh  insert_sample_comments.sh  insert_sample_users.sh
script/migrations/: 2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  B7__baseline.sql  V10__create_attachment.sql  V11__create_pig_website.sql  V12__alter_pig_admission.sql  V13_create_sigpig_createdyear.sql  V14__create_enrollment.sql  V1__init.sql  (+3 more)
tests/: conftest.py  factories.py  test_common.py  test_common_api.py  test_file.py  test_major.py  test_major_api.py  test_major_api_2.py  test_scsc.py  types.py
(+141 files in other folders)
