[project]
name = "homepage-init-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aio-pika==9.5.5",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiofiles==23.2.1",
    "aiormq==6.8.1",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.3",
    "click==8.1.8",
    "discord-py==2.5.2",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.121.0",
    "fastapi-cli==0.0.7",
    "frozenlist==1.7.0",
    "greenlet==3.2.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "multidict==6.4.4",
    "pamqp==3.3.0",
    "propcache==0.3.2",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.9.1",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "rich==14.0.0",
    "rich-toolkit==0.14.5",
    "setuptools==78.1.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "starlette==0.49.1",
    "typer==0.15.3",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.5.0",
    "uvicorn==0.34.2",
    "uvloop==0.21.0",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
    "wheel==0.45.1",
    "yarl==1.20.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "pre-commit>=4.3.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = false
